Minor formatting changes

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <input type="text" id="bookpages" name ="bookpages">
                 </div>
                 <div class="book-read">
-                    <label for="bookread">Have you read this book?</label><br>
-                    <input type="radio" name="bookread" value="read" checked>Yes</input>
-                    <input type="radio" name="bookread" value="not read">No</input>
+                    <label for="isread">Have you read this book?</label><br>
+                    <input type="radio" id="read" name="bookread" value="true" checked>Yes</input>
+                    <input type="radio" id="not-read" name="bookread" value="false">No</input>
                 </div>
                 <div class="addBtn">
                     <button type="button">Add</button>
